Fixes on alignment and icon size

--- a/src/components/ToggleSwitch/ToggleSwitch.scss
+++ b/src/components/ToggleSwitch/ToggleSwitch.scss
@@ -5,6 +5,7 @@
   display: inline-block;
   width: 50px;
   height: 26px;
+  font-size: 1.6em;
 }
 
 /* Fix visible slider checkbox */
